//
//  MockGRPCConnectionTests.swift
//  librorumTests
//
//  Mock gRPC connection and integration tests
//

import Testing
import Foundation
@testable import librorum

@MainActor
struct MockGRPCConnectionTests {
    
    // MARK: - Mock gRPC Server
    
    class MockGRPCServer {
        var isRunning = false
        var shouldFailConnection = false
        var shouldTimeout = false
        var latency: TimeInterval = 0.01
        var mockNodes: [NodeInfo] = []
        var mockHealthData: SystemHealthData?
        
        func start() async throws {
            if shouldFailConnection {
                throw MockGRPCError.connectionFailed
            }
            isRunning = true
        }
        
        func stop() async {
            isRunning = false
        }
        
        func handleHeartbeat(nodeId: String) async throws -> HeartbeatResponse {
            try await simulateLatency()
            
            guard isRunning else {
                throw MockGRPCError.serverNotRunning
            }
            
            return HeartbeatResponse(
                nodeId: nodeId,
                address: "127.0.0.1:50051",
                systemInfo: "Mock System",
                timestamp: Date(),
                status: true
            )
        }
        
        func handleGetNodes() async throws -> [NodeInfo] {
            try await simulateLatency()
            
            guard isRunning else {
                throw MockGRPCError.serverNotRunning
            }
            
            return mockNodes
        }
        
        func handleGetSystemHealth() async throws -> SystemHealthData {
            try await simulateLatency()
            
            guard isRunning else {
                throw MockGRPCError.serverNotRunning
            }
            
            return mockHealthData ?? SystemHealthData(
                totalStorage: 1000000000,
                usedStorage: 250000000,
                availableStorage: 750000000,
                totalFiles: 100,
                totalChunks: 500,
                networkLatency: latency,
                errorCount: 0,
                uptime: 3600,
                memoryUsage: 50000000,
                cpuUsage: 15.5
            )
        }
        
        private func simulateLatency() async throws {
            if shouldTimeout {
                throw MockGRPCError.timeout
            }
            
            if latency > 0 {
                try await Task.sleep(nanoseconds: UInt64(latency * 1_000_000_000))
            }
        }
    }
    
    // MARK: - Mock gRPC Client with Server Integration
    
    class MockGRPCIntegrationClient: LibrorumClient {
        let mockServer: MockGRPCServer
        var isConnected = false
        
        init(mockServer: MockGRPCServer) {
            self.mockServer = mockServer
        }
        
        override func connect(to address: String) async throws {
            try await mockServer.start()
            isConnected = true
        }
        
        override func disconnect() async {
            await mockServer.stop()
            isConnected = false
        }
        
        override func isHealthy() async -> Bool {
            return isConnected && mockServer.isRunning
        }
        
        override func heartbeat(nodeId: String) async throws -> HeartbeatResponse {
            guard isConnected else {
                throw LibrorumClientError.notConnected
            }
            return try await mockServer.handleHeartbeat(nodeId: nodeId)
        }
        
        override func getConnectedNodes() async throws -> [NodeInfo] {
            guard isConnected else {
                throw LibrorumClientError.notConnected
            }
            return try await mockServer.handleGetNodes()
        }
        
        override func getSystemHealth() async throws -> SystemHealthData {
            guard isConnected else {
                throw LibrorumClientError.notConnected
            }
            return try await mockServer.handleGetSystemHealth()
        }
    }
    
    // MARK: - Mock Errors
    
    enum MockGRPCError: Error, LocalizedError, Equatable {
        case connectionFailed
        case serverNotRunning
        case timeout
        case invalidRequest
        
        var errorDescription: String? {
            switch self {
            case .connectionFailed:
                return "Mock connection failed"
            case .serverNotRunning:
                return "Mock server is not running"
            case .timeout:
                return "Mock request timeout"
            case .invalidRequest:
                return "Mock invalid request"
            }
        }
    }
    
    // MARK: - Connection Tests
    
    @Test("Mock gRPC successful connection")
    func testMockGRPCSuccessfulConnection() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        #expect(client.isConnected == true)
        #expect(server.isRunning == true)
        #expect(await client.isHealthy() == true)
    }
    
    @Test("Mock gRPC connection failure")
    func testMockGRPCConnectionFailure() async throws {
        let server = MockGRPCServer()
        server.shouldFailConnection = true
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        do {
            try await client.connect(to: "localhost:50051")
            #expect(Bool(false), "Should have thrown an error")
        } catch {
            #expect(error is MockGRPCError)
        }
        
        #expect(client.isConnected == false)
        #expect(server.isRunning == false)
    }
    
    @Test("Mock gRPC connection lifecycle")
    func testMockGRPCConnectionLifecycle() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        // Initial state
        #expect(await client.isHealthy() == false)
        
        // Connect
        try await client.connect(to: "localhost:50051")
        #expect(await client.isHealthy() == true)
        
        // Disconnect
        await client.disconnect()
        #expect(await client.isHealthy() == false)
    }
    
    // MARK: - Service Operation Tests
    
    @Test("Mock gRPC heartbeat service")
    func testMockGRPCHeartbeatService() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        let response = try await client.heartbeat(nodeId: "test.local")
        
        #expect(response.nodeId == "test.local")
        #expect(response.status == true)
        #expect(response.address == "127.0.0.1:50051")
        #expect(!response.systemInfo.isEmpty)
    }
    
    @Test("Mock gRPC get nodes service")
    func testMockGRPCGetNodesService() async throws {
        let server = MockGRPCServer()
        let mockNodes = [
            NodeInfo(
                nodeId: "node1.local",
                address: "192.168.1.100:50051",
                systemInfo: "macOS 14.0",
                status: .online
            ),
            NodeInfo(
                nodeId: "node2.local",
                address: "192.168.1.101:50051",
                systemInfo: "Ubuntu 22.04",
                status: .offline
            )
        ]
        server.mockNodes = mockNodes
        
        let client = MockGRPCIntegrationClient(mockServer: server)
        try await client.connect(to: "localhost:50051")
        
        let nodes = try await client.getConnectedNodes()
        
        #expect(nodes.count == 2)
        #expect(nodes[0].nodeId == "node1.local")
        #expect(nodes[0].status == .online)
        #expect(nodes[1].nodeId == "node2.local")
        #expect(nodes[1].status == .offline)
    }
    
    @Test("Mock gRPC get system health service")
    func testMockGRPCGetSystemHealthService() async throws {
        let server = MockGRPCServer()
        let mockHealth = SystemHealthData(
            totalStorage: 2000000000,
            usedStorage: 800000000,
            availableStorage: 1200000000,
            totalFiles: 200,
            totalChunks: 1000,
            networkLatency: 0.025,
            errorCount: 1,
            uptime: 7200,
            memoryUsage: 100000000,
            cpuUsage: 30.0
        )
        server.mockHealthData = mockHealth
        
        let client = MockGRPCIntegrationClient(mockServer: server)
        try await client.connect(to: "localhost:50051")
        
        let health = try await client.getSystemHealth()
        
        #expect(health.totalStorage == 2000000000)
        #expect(health.usedStorage == 800000000)
        #expect(health.totalFiles == 200)
        #expect(health.networkLatency == 0.025)
        #expect(health.cpuUsage == 30.0)
    }
    
    // MARK: - Error Handling Tests
    
    @Test("Mock gRPC service calls without connection")
    func testMockGRPCServiceCallsWithoutConnection() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        // All service calls should fail without connection
        do {
            _ = try await client.heartbeat(nodeId: "test.local")
            #expect(Bool(false), "Should have thrown an error")
        } catch {
            #expect(error is LibrorumClientError)
        }
        
        do {
            _ = try await client.getConnectedNodes()
            #expect(Bool(false), "Should have thrown an error")
        } catch {
            #expect(error is LibrorumClientError)
        }
        
        do {
            _ = try await client.getSystemHealth()
            #expect(Bool(false), "Should have thrown an error")
        } catch {
            #expect(error is LibrorumClientError)
        }
    }
    
    @Test("Mock gRPC server stop during operation")
    func testMockGRPCServerStopDuringOperation() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        // Stop server
        await server.stop()
        
        // Service calls should fail
        do {
            _ = try await client.heartbeat(nodeId: "test.local")
            #expect(Bool(false), "Should have thrown an error")
        } catch {
            #expect(error is MockGRPCError)
        }
    }
    
    @Test("Mock gRPC timeout handling")
    func testMockGRPCTimeoutHandling() async throws {
        let server = MockGRPCServer()
        server.shouldTimeout = true
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        do {
            _ = try await client.heartbeat(nodeId: "test.local")
            #expect(Bool(false), "Should have thrown an error")
        } catch {
            #expect(error is MockGRPCError)
        }
    }
    
    // MARK: - Latency and Performance Tests
    
    @Test("Mock gRPC low latency operations")
    func testMockGRPCLowLatencyOperations() async throws {
        let server = MockGRPCServer()
        server.latency = 0.001 // 1ms
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        let startTime = Date()
        _ = try await client.heartbeat(nodeId: "test.local")
        let duration = Date().timeIntervalSince(startTime)
        
        #expect(duration >= 0.001) // At least the configured latency
        #expect(duration < 0.1)    // But reasonable for a mock
    }
    
    @Test("Mock gRPC high latency simulation")
    func testMockGRPCHighLatencySimulation() async throws {
        let server = MockGRPCServer()
        server.latency = 0.1 // 100ms
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        let startTime = Date()
        _ = try await client.getSystemHealth()
        let duration = Date().timeIntervalSince(startTime)
        
        #expect(duration >= 0.1)   // At least the configured latency
        #expect(duration < 0.2)    // But not too much overhead
    }
    
    // MARK: - Concurrent Operations Tests
    
    @Test("Mock gRPC concurrent heartbeats")
    func testMockGRPCConcurrentHeartbeats() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        await withTaskGroup(of: HeartbeatResponse.self) { group in
            for i in 0..<10 {
                group.addTask {
                    try! await client.heartbeat(nodeId: "node\(i).local")
                }
            }
            
            var responses: [HeartbeatResponse] = []
            for await response in group {
                responses.append(response)
            }
            
            #expect(responses.count == 10)
            #expect(responses.allSatisfy { $0.status == true })
        }
    }
    
    @Test("Mock gRPC concurrent service calls")
    func testMockGRPCConcurrentServiceCalls() async throws {
        let server = MockGRPCServer()
        server.mockNodes = [
            NodeInfo(nodeId: "concurrent.node.local", address: "127.0.0.1:50051")
        ]
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        await withTaskGroup(of: Void.self) { group in
            // Multiple different service calls concurrently
            group.addTask {
                _ = try? await client.heartbeat(nodeId: "test1.local")
            }
            group.addTask {
                _ = try? await client.getConnectedNodes()
            }
            group.addTask {
                _ = try? await client.getSystemHealth()
            }
            group.addTask {
                _ = try? await client.heartbeat(nodeId: "test2.local")
            }
            
            await group.waitForAll()
        }
        
        // If we get here without hanging, concurrent operations work
        #expect(true)
    }
    
    // MARK: - Integration with CoreManager Tests
    
    @Test("Mock gRPC integration with CoreManager")
    func testMockGRPCIntegrationWithCoreManager() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        // Simulate CoreManager using the client
        try await client.connect(to: "localhost:50051")
        
        let isHealthy = await client.isHealthy()
        #expect(isHealthy == true)
        
        let health = try await client.getSystemHealth()
        #expect(health.totalStorage > 0)
        #expect(health.uptime > 0)
        
        let nodes = try await client.getConnectedNodes()
        #expect(nodes.isEmpty) // No mock nodes set up
    }
    
    // MARK: - Protocol Compliance Tests
    
    @Test("Mock gRPC response format validation")
    func testMockGRPCResponseFormatValidation() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        // Heartbeat response validation
        let heartbeat = try await client.heartbeat(nodeId: "format.test.local")
        #expect(!heartbeat.nodeId.isEmpty)
        #expect(!heartbeat.address.isEmpty)
        #expect(!heartbeat.systemInfo.isEmpty)
        #expect(heartbeat.timestamp <= Date())
        
        // System health response validation
        let health = try await client.getSystemHealth()
        #expect(health.totalStorage >= 0)
        #expect(health.usedStorage >= 0)
        #expect(health.availableStorage >= 0)
        #expect(health.totalFiles >= 0)
        #expect(health.totalChunks >= 0)
        #expect(health.networkLatency >= 0)
        #expect(health.errorCount >= 0)
        #expect(health.uptime >= 0)
        #expect(health.memoryUsage >= 0)
        #expect(health.cpuUsage >= 0)
    }
    
    // MARK: - Edge Cases Tests
    
    @Test("Mock gRPC empty responses")
    func testMockGRPCEmptyResponses() async throws {
        let server = MockGRPCServer()
        server.mockNodes = [] // Empty nodes list
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        let nodes = try await client.getConnectedNodes()
        #expect(nodes.isEmpty)
    }
    
    @Test("Mock gRPC large response simulation")
    func testMockGRPCLargeResponseSimulation() async throws {
        let server = MockGRPCServer()
        
        // Generate large number of mock nodes
        var largeNodeList: [NodeInfo] = []
        for i in 0..<1000 {
            largeNodeList.append(NodeInfo(
                nodeId: "node\(i).librorum.local",
                address: "192.168.1.\(i % 255):50051",
                systemInfo: "Mock System \(i)",
                status: i % 2 == 0 ? .online : .offline
            ))
        }
        server.mockNodes = largeNodeList
        
        let client = MockGRPCIntegrationClient(mockServer: server)
        try await client.connect(to: "localhost:50051")
        
        let startTime = Date()
        let nodes = try await client.getConnectedNodes()
        let duration = Date().timeIntervalSince(startTime)
        
        #expect(nodes.count == 1000)
        #expect(duration < 1.0) // Should handle large responses efficiently
    }
    
    // MARK: - Network Simulation Tests
    
    @Test("Mock gRPC network quality simulation")
    func testMockGRPCNetworkQualitySimulation() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        
        // Simulate different network conditions
        let networkConditions: [TimeInterval] = [0.001, 0.05, 0.1, 0.2]
        
        for latency in networkConditions {
            server.latency = latency
            
            let startTime = Date()
            let health = try await client.getSystemHealth()
            let actualLatency = Date().timeIntervalSince(startTime)
            
            #expect(actualLatency >= latency)
            #expect(health.networkLatency == latency)
        }
    }
    
    // MARK: - Memory and Resource Tests
    
    @Test("Mock gRPC memory management")
    func testMockGRPCMemoryManagement() async throws {
        var server: MockGRPCServer? = MockGRPCServer()
        var client: MockGRPCIntegrationClient? = MockGRPCIntegrationClient(mockServer: server!)
        
        weak var weakServer = server
        weak var weakClient = client
        
        try await client?.connect(to: "localhost:50051")
        
        // Release references
        client = nil
        server = nil
        
        // Objects should be deallocated
        #expect(weakClient == nil)
        #expect(weakServer == nil)
    }
    
    @Test("Mock gRPC resource cleanup")
    func testMockGRPCResourceCleanup() async throws {
        let server = MockGRPCServer()
        let client = MockGRPCIntegrationClient(mockServer: server)
        
        try await client.connect(to: "localhost:50051")
        #expect(server.isRunning == true)
        
        await client.disconnect()
        #expect(server.isRunning == false)
        
        // Subsequent operations should fail cleanly
        do {
            _ = try await client.getSystemHealth()
            #expect(Bool(false), "Should have thrown an error")
        } catch {
            #expect(error is LibrorumClientError)
        }
    }
}